force-app/main/default/objects/PLR_UI_Log__c/PLR_UI_Log__c.object-meta.xml
<CustomObject>
    <description>PLR custom UI event log</description>
    <label>PLR UI Log</label>
    <nameField>
        <displayFormat>UIL-{00000000}</displayFormat>
        <label>PLR UI Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PLR UI Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>