force-app/main/default/objects/PLR_UI_Log__c/fields/Guid__c.field-meta.xml
<CustomField>
    <fullName>Guid__c</fullName>
    <label>Guid</label>
    <length>200</length>
    <type>Text</type>
</CustomField>