force-app/main/default/objects/PLR_UI_Log__c/fields/Link_Label__c.field-meta.xml
<CustomField>
    <fullName>Link_Label__c</fullName>
    <label>Link Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>