force-app/main/default/objects/PLR_UI_Log__c/fields/Permission_Sets__c.field-meta.xml
<CustomField>
    <fullName>Permission_Sets__c</fullName>
    <label>Permission Sets</label>
    <length>255</length>
    <type>Text</type>
</CustomField>