force-app/main/default/objects/PLR_UI_Log__c/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <label>Record Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>