force-app/main/default/objects/PLR_UI_Log__c/fields/Route_Standardised__c.field-meta.xml
<CustomField>
    <fullName>Route_Standardised__c</fullName>
    <label>Route Standardised</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>